package multi.version;

public class MultiVersion {
	public static String version () {
		return "1";
	}
}
